# vat

./: Cargo.toml  README.md
examples/: installed_pkg_test.rs  simple_test.rs  vat-env-cmd.rs  vat_publish.rs
src/: burnin.rs  config.rs  git.rs  init.rs  lib.rs  noduro.rs  package.rs  registry.rs  repository.rs  stack.rs  vat_repository.rs
