[package]
name = "vat"
version.workspace = true
edition.workspace = true

[dependencies]



# external dependencies
serde_json = {workspace = true}
serde = {workspace = true}
toml = {workspace = true}


## errors
anyhow = {workspace = true}
thiserror = {workspace = true}

## cli
clap = {workspace = true, features = ["derive"]}
colored = {workspace = true}
color-print = {workspace = true}
ansi_term = {workspace = true}
