[package]
name = "vat"
description = "A lightweight package manager"
version = "0.1.0"
edition = "2021"

[dependencies]



# external dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
toml = "0.8.19"


## error
anyhow = "1.0.93"
thiserror = "2.0.3"


## cli
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
color-print = "0.3.7"
ansi_term = "0.12.1"
git2 = "=0.19.0"



## user directory
dirs-next = "^2.0.0"


## fs
fs_extra = "1.0.1"   
zip = "2.2.2"
semver = {version = "1.0.25", features = ["serde"]}


## sys info
installed_pkg = "0.3.5"
regex = "1.11.1"
